Fixed index article list too close to event list
Also moved the `<link>` tag for `index.css` below the other tags,
to make the rules in `index.css` (more easily) override the ones in the above stylesheets.

--- a/web/static/web/css/index.css
+++ b/web/static/web/css/index.css
@@ -43,6 +43,10 @@
     border-color: var(--make-yellow);
 }
 
+.articles {
+    margin-top: 6em;
+}
+
 
 /* Events are listed alternatingly left and right */
 @media screen and (min-width: 1200px) {
